force-app/main/default/objects/Order__c/fields/Account_Order__c.field-meta.xml
<CustomField>
    <fullName>Account_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>