force-app/main/default/objects/Order__c/fields/Amendment_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Remarks__c</fullName>
    <label>Amendment Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>