force-app/main/default/objects/Order__c/fields/Booking_Party__c.field-meta.xml
<CustomField>
    <fullName>Booking_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Party</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>