force-app/main/default/objects/Order__c/fields/Booking_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference_Number__c</fullName>
    <label>Booking Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>