force-app/main/default/objects/Order__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <formula>TEXT( Quotation__r.Opportunity__r.Owner.Branch__c )</formula>
    <label>Branch</label>
    <type>Text</type>
</CustomField>