force-app/main/default/objects/Order__c/fields/Cancelled_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Remarks__c</fullName>
    <label>Cancelled Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>