force-app/main/default/objects/Order__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF( ISBLANK(  Leadc_Order__r.Name  ) ,   Account_Order__r.Name  , Leadc_Order__r.Name)</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>