force-app/main/default/objects/Order__c/fields/Enquiry_Created_Order__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Created_Order__c</fullName>
    <formula>Enquiry_Order__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry Created</label>
    <type>DateTime</type>
</CustomField>