force-app/main/default/objects/Order__c/fields/Enquiry_Order__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Order__c</fullName>
    <label>Enquiry</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>