force-app/main/default/objects/Order__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration</label>
    <type>Checkbox</type>
</CustomField>