force-app/main/default/objects/Order__c/fields/isLCL__c.field-meta.xml
<CustomField>
    <fullName>isLCL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLCL</label>
    <type>Checkbox</type>
</CustomField>