force-app/main/default/objects/Order__c/fields/Leadc_Order__c.field-meta.xml
<CustomField>
    <fullName>Leadc_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leadc</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>