force-app/main/default/objects/Order__c/fields/Operations_Executive__c.field-meta.xml
<CustomField>
    <fullName>Operations_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Executive</label>
    <referenceTo>Operations_Executive__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>