force-app/main/default/objects/Order__c/fields/Opportunity_Order__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Order</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>