force-app/main/default/objects/Order__c/fields/Order_Item_Link__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Link__c</fullName>
    <description>DEVELOPER USE ONLY.
This field is used for mapping the order with respective item while Order Creation.
Used Only for Development Purpose.</description>
    <label>Order &amp; Item Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>