force-app/main/default/objects/Order__c/fields/Order_Turnaround_Time_Order__c.field-meta.xml
<CustomField>
    <fullName>Order_Turnaround_Time_Order__c</fullName>
    <formula>TEXT(FLOOR(CreatedDate - Enquiry_Created_Order__c)) &amp; &quot; Day(s)&quot; &amp; &apos; &apos;  &amp;
TEXT(ROUND(MOD((CreatedDate - Enquiry_Created_Order__c)*24,24),0)) &amp;&quot; Hour(s) &quot; &amp; &apos; &apos; &amp;
TEXT(ROUND(MOD((CreatedDate - Enquiry_Created_Order__c)*1440,60),0)) &amp;&quot; Minute(s) &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Turnaround Time</label>
    <type>Text</type>
</CustomField>