force-app/main/default/objects/Order__c/fields/Order_Validity__c.field-meta.xml
<CustomField>
    <fullName>Order_Validity__c</fullName>
    <label>Order Validity</label>
    <type>Date</type>
</CustomField>