force-app/main/default/objects/Order__c/fields/Total_Teus__c.field-meta.xml
<CustomField>
    <fullName>Total_Teus__c</fullName>
    <label>Total Teus</label>
    <summarizedField>Order_Item__c.Teus_FB__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>