force-app/main/default/objects/Order__c/validationRules/Cancelled_Remarks_missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Remarks_missing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Status__c),  ISBLANK(Cancelled_Remarks__c))</errorConditionFormula>
    <errorDisplayField>Cancelled_Remarks__c</errorDisplayField>
    <errorMessage>Please provide remarks for Order Cancellation</errorMessage>
</ValidationRule>